<resources>
    <string name="app_name">Candy Shop</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu">Menu</string>
    <string name="search">Search</string>
    <string name="find_code">find code \nget prize</string>
    <string name="discover">Discover</string>
    <string name="categories">Categories</string>
    <string name="cakes">Cakes</string>
    <string name="category_image">Category Image</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_cart_button">Add to Cart Button</string>
    <string name="d_kg">֏ / kg</string>
    <string name="products">products</string>
    <string name="ingredients">Ingredients</string>
    <string name="shelf_life">Shelf life</string>
    <string name="add_to_basket">Add to basket</string>
</resources>