<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="15dp"
        android:fontFamily="@font/circe_regular"
        android:hint="@string/search"
        android:paddingStart="25dp"
        android:paddingEnd="10dp"
        android:textColor="#555555"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:background="@drawable/prize_background"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tvFindCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@android:color/white"
                android:text="@string/find_code"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAllCaps="true"
                android:textSize="23sp" />
            
            <Button
                android:id="@+id/btnDiscover"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@+id/tvFindCode"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/circe_regular"
                android:text="@string/discover"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:background="@drawable/discover_button_background"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>