<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_margin="16dp"
        android:scaleType="center"
        android:background="@drawable/btn_basket_background"
        android:translationZ="2dp"
        android:src="@drawable/add_to_cart"
        android:layout_gravity="bottom|end" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:src="@drawable/expand"
        android:translationZ="1dp"
        android:layout_gravity="top|start"/>

    <LinearLayout
        android:id="@+id/llAnim"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="bottom"
        android:translationZ="1dp"
        android:background="@android:color/transparent"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:alpha="0">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="end"
            android:background="@drawable/gradient_shadow"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@android:color/white">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/transparent"
                android:text="-"
                android:textColor="#E2066D"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvCount" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnPlus" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/transparent"
                android:text="+"
                android:textColor="#E2066D"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnAddToBasket" />

            <Button
                android:id="@+id/btnAddToBasket"
                android:layout_width="231dp"
                android:layout_height="44dp"
                android:background="@drawable/btn_add_to_basket_background"
                android:fontFamily="@font/nunito"
                android:text="@string/add_to_basket"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:textColor="#fff"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            tools:context=".ui.menu.MenuFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="0dp"
                android:layout_height="550dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginEnd="30dp"
                android:elevation="5dp"
                android:translationY="23dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="23dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvImage"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageButton
                    android:id="@+id/ibFavorite"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:scaleType="center"
                    android:src="@drawable/like" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito"
                android:textColor="#8B004F"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvImage" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="#E2066D"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nunito"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

            <TextView
                android:id="@+id/tvIngredientsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nunito_bold"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nunito"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIngredientsTitle" />

            <TextView
                android:id="@+id/tvShelfLifeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nunito_bold"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/shelf_life"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIngredients" />

            <TextView
                android:id="@+id/tvShelfLife"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="90dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/nunito"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvShelfLifeTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>


